# mini_projects

./: README.md  pyproject.toml
mini_projects/nimsuggest_tui/: nimsuggest_tui.py  tui.py
mini_projects/tree_sitter_node_viz/: base.py  tree_parse.py  tree_viz.css  tree_viz.py
promptan/: main.py
wm_scratch_pad/: scratchpad.py
